syntax = "proto3";

                 package voiceCustomization;
service VoiceCustomizationService {
 rpc createVoiceCustomization (VoiceCustomizationCreateInput) returns (VoiceCustomization) {}
rpc voiceCustomizations (findManyParams) returns (stream VoiceCustomization) {}
rpc voiceCustomization (VoiceCustomizationWhereUniqueInput) returns (VoiceCustomization) {}
rpc updateVoiceCustomization (VoiceCustomizationUpdateInput) returns (VoiceCustomization) {}
rpc deleteVoiceCustomization (VoiceCustomizationWhereUniqueInput) returns (VoiceCustomization) {}
rpc findManyVoiceCustomization (VoiceCustomizationWhereUniqueInput) returns (stream VirtualArtist) {}
rpc updateVoiceCustomization (VirtualArtistParams) returns (stream VirtualArtist) {}
rpc connectVoiceCustomization (VirtualArtistParams) returns (VirtualArtist) {}
rpc disconnectVoiceCustomization (VirtualArtistParams) returns (VirtualArtist) {} 
 }
message VoiceCustomizationCreateInput {
string aiGeneratedVoice = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
repeated VirtualArtist virtualArtists = 5;
string voiceClonedFrom = 6;
};
message VoiceCustomization {
string aiGeneratedVoice = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
repeated VirtualArtist virtualArtists = 5;
string voiceClonedFrom = 6;
};
message VoiceCustomizationWhereUniqueInput {
string aiGeneratedVoice = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
repeated VirtualArtist virtualArtists = 5;
string voiceClonedFrom = 6;
};
message VoiceCustomizationUpdateInput {
string aiGeneratedVoice = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
repeated VirtualArtist virtualArtists = 5;
string voiceClonedFrom = 6;
};
message findManyParams {

};
message VirtualArtist {
string createdAt = 1;
string description = 2;
repeated string genre = 3;
string id = 4;
string name = 5;
string updatedAt = 6;
};
message VirtualArtistWhereUniqueInput {
string createdAt = 1;
string description = 2;
repeated string genre = 3;
string id = 4;
string name = 5;
string updatedAt = 6;
};
message VirtualArtistParams {
VoiceCustomizationWhereUniqueInput voiceCustomizationWhereUniqueInput = 1;
VirtualArtistWhereUniqueInput virtualartistWhereUniqueInput = 2;
};